Add topo for live run with data from mFLES + related doc

--- a/slurm-main.cfg
+++ b/slurm-main.cfg
@@ -1,3 +1,4 @@
-#SBATCH --time=00:30:00
+#SBATCH -J CbmDds
+#SBATCH --time=00:45:00
 #SBATCH --partition "main"
 #SBATCH --singularity-container=/cvmfs/cbm.gsi.de/debian10/containers/debian10_master_v18.8.0_nov22p1_nodds.sif
