Use new common Cbmroot+Flesnet image everywhere

--- a/slurm-main.cfg
+++ b/slurm-main.cfg
@@ -1,5 +1,5 @@
 #SBATCH -J CbmDds
 #SBATCH --time=00:45:00
 #SBATCH --partition "main"
-#SBATCH --singularity-container=/cvmfs/cbm.gsi.de/debian10/containers/debian10_master_v18.8.0_nov22p1_nodds.sif
-#_#SBATCH --singularity-container=/cvmfs/cbm.gsi.de/debian10/containers/debian10_master_v18.8.0_nov22p1_online_flesnet.sif
+#_#SBATCH --singularity-container=/cvmfs/cbm.gsi.de/debian10/containers/debian10_master_v18.8.0_nov22p1_nodds.sif
+#SBATCH --singularity-container=/cvmfs/cbm.gsi.de/debian10/containers/debian10_master_v18.8.0_nov22p1_online_flesnet.sif
